syntax = "proto3";

package rpc_hellorpc;

message HelloRequest {
    string name = 1;
}
message HelloResponse {
    string message = 1;
}

service HelloRpcService {
    rpc SendHello(HelloRequest) returns (HelloResponse) {}
}